compilers/hw3/mjParser.java
/* Generated By:JavaCC: Do not edit this line. mjParser.java */
import java.util.*;
import java.io.*;
import ast.*;

public class mjParser implements mjParserConstants {
        public static void main(String [] args)
        {
                try
                {
                        if (args.length == 1)
                        {
                                FileInputStream stream = new FileInputStream(args[0]);
                                Ast.Program p = new mjParser(stream).Program();
                                stream.close();
                                System.out.print(p);
                        }
                        else
                        {
                                System.out.println("Need a file name as command-line argument.");
                        }
                }
                catch (TokenMgrError e)
                {
                        System.err.println(e);
                }
                catch (Exception e)
                {
                        System.err.println(e);
                }
        }

//
// PARSER SECTION ---------------------------------------------------------------
//

// Program -> {ClassDecl}
//
  static final public Ast.Program Program() throws ParseException {
        List<Ast.ClassDecl> cl = new ArrayList<Ast.ClassDecl>();
        Ast.ClassDecl c;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 9:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      c = ClassDecl();
                     cl.add(c);
    }
    jj_consume_token(0);
    {if (true) return new Ast.Program(cl);}
    throw new Error("Missing return statement in function");
  }

// ClassDecl -> "class" <ID> ["extends" <ID>] "{" {VarDecl} {MethodDecl} "}"
  static final public Ast.ClassDecl ClassDecl() throws ParseException {
        Ast.Id className;
        Ast.Id superClass = null;
        List<Ast.VarDecl> variables  = new ArrayList<Ast.VarDecl>();
        List<Ast.MethodDecl> methods = new ArrayList<Ast.MethodDecl>();

        Ast.VarDecl variable;
        Ast.MethodDecl method;
    jj_consume_token(9);
    className = ID();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 10:
      jj_consume_token(10);
      superClass = ID();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(55);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 14:
      case 15:
      case ID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      variable = VarDecl();
                                        variables.add(variable);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 12:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      method = MethodDecl();
                                         methods.add(method);
    }
    jj_consume_token(56);
                {if (true) return new Ast.ClassDecl(className.nm, superClass == null ? null : superClass.nm, variables, methods);}
    throw new Error("Missing return statement in function");
  }

// MethodDecl -> "public" (
//		ExtType ID "(" [Param {"," Param}] ")"
//	    | "static" "void" "main" "(" "String" "[" "]" ID ")"
// 	)
// "{" {VarDecl} {Stmt} "}"
  static final public Ast.MethodDecl MethodDecl() throws ParseException {
        Ast.Type returnType = null;
        Ast.Id methodName = null;
        List<Ast.Param> params = new ArrayList<Ast.Param>();
        List<Ast.VarDecl> varDecls = new ArrayList<Ast.VarDecl>();
        List<Ast.Stmt> stmts = new ArrayList<Ast.Stmt>();

        Ast.Param param;
        Ast.VarDecl varDecl;
        Ast.Stmt stmt;
    jj_consume_token(12);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 13:
    case 14:
    case 15:
    case ID:
      returnType = ExtType();
      methodName = ID();
      jj_consume_token(51);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 14:
      case 15:
      case ID:
        param = Param();
                                           params.add(param);
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 49:
            ;
            break;
          default:
            jj_la1[4] = jj_gen;
            break label_4;
          }
          jj_consume_token(49);
          param = Param();
                                              params.add(param);
        }
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      jj_consume_token(52);
      break;
    case 11:
      jj_consume_token(11);
      jj_consume_token(13);
      jj_consume_token(22);
      jj_consume_token(51);
      jj_consume_token(23);
      jj_consume_token(53);
      jj_consume_token(54);
      ID();
      jj_consume_token(52);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(55);
    label_5:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_5;
      }
      varDecl = VarDecl();
                                                    varDecls.add(varDecl);
    }
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 17:
      case 18:
      case 20:
      case 21:
      case 26:
      case ID:
      case 55:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_6;
      }
      stmt = Stmt();
                                 stmts.add(stmt);
    }
    jj_consume_token(56);
                {if (true) return new Ast.MethodDecl(returnType, methodName == null? "main" : methodName.nm, params, varDecls, stmts);}
    throw new Error("Missing return statement in function");
  }

// Param -> Type <ID>
  static final public Ast.Param Param() throws ParseException {
        Ast.Type type;
        Ast.Id paramName;
    type = Type();
    paramName = ID();
                {if (true) return new Ast.Param(type, paramName.nm);}
    throw new Error("Missing return statement in function");
  }

// VarDecl -> Type <ID> ["=" InitExpr()] ";"
  static final public Ast.VarDecl VarDecl() throws ParseException {
        Ast.Type type;
        Ast.Id varName;
        Ast.Exp expr = null;
    type = Type();
    varName = ID();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 47:
      jj_consume_token(47);
      expr = InitExpr();
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    jj_consume_token(48);
                {if (true) return new Ast.VarDecl(type, varName.nm, expr);}
    throw new Error("Missing return statement in function");
  }

// ExtType -> Type | "void"
  static final public Ast.Type ExtType() throws ParseException {
        Ast.Type type;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 13:
      jj_consume_token(13);
                         type=null;
      break;
    case 14:
    case 15:
    case ID:
      type = Type();
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return type;}
    throw new Error("Missing return statement in function");
  }

// Type -> <ID> | BasicType ["[" "]"]
  static final public Ast.Type Type() throws ParseException {
        Ast.Type type;
        Ast.Id typeName;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 14:
    case 15:
      type = BasicType();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 53:
        jj_consume_token(53);
        jj_consume_token(54);
                                               type = new Ast.ArrayType(type);
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      break;
    case ID:
      typeName = ID();
                                    type = new Ast.ObjType(typeName.nm);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return type;}
    throw new Error("Missing return statement in function");
  }

// BasicType -> "int" | "boolean"
  static final public Ast.Type BasicType() throws ParseException {
        Ast.Type type;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 15:
      jj_consume_token(15);
                        {if (true) return new Ast.BoolType();}
      break;
    case 14:
      jj_consume_token(14);
                        {if (true) return new Ast.IntType();}
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// Stmt -> "{" {Stmt} "}"
//         | ExtId ("(" [Args] ")" | ["[" Expr "]"] "=" InitExpr) ";"
//         | "if" "(" Expr ")" Stmt ["else" Stmt]
//         | "while" "(" Expr ")" Stmt
//         | "System" "." "out" "." "println" "(" [PrintArg] ")" ";"
//         | "return" Expr ";"
  static final public Ast.Stmt Stmt() throws ParseException {
        List<Ast.Stmt> stmts = new ArrayList<Ast.Stmt>();
        List<Ast.Exp> args = new ArrayList<Ast.Exp>();
        Ast.Stmt stmt;
        Ast.Stmt stmt0 = null;
        Ast.Block block;
        Ast.Assign assign;
        Ast.CallStmt call;
        Ast.If ifStmt;
        Ast.While whileStmt;
        Ast.Print print;
        Ast.Return returnStmt;

        Ast.Exp extId;
        Ast.Id exp1Id;
        Ast.Field exp1F;
        Ast.Exp exp1;
        Ast.Exp exp2;
        Ast.Exp exp0 = null;
        Ast.Node printArg = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 55:
      jj_consume_token(55);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 17:
        case 18:
        case 20:
        case 21:
        case 26:
        case ID:
        case 55:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_7;
        }
        stmt = Stmt();
                              stmts.add(stmt);
      }
      jj_consume_token(56);
                        {if (true) return new Ast.Block(stmts);}
      break;
    case 17:
    case ID:
      exp1 = ExtId();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 47:
      case 53:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 53:
          jj_consume_token(53);
          exp0 = Expr();
          jj_consume_token(54);
          break;
        default:
          jj_la1[14] = jj_gen;
          ;
        }
        jj_consume_token(47);
        exp2 = InitExpr();
        jj_consume_token(48);
                                if (exp0 == null)
                                {
                                        {if (true) return new Ast.Assign(exp1, exp2);}
                                }
                                else
                                {
                                        {if (true) return new Ast.Assign( new Ast.ArrayElm(exp1, exp0), exp2 );}
                                }
        break;
      case 51:
        jj_consume_token(51);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 17:
        case 24:
        case 25:
        case INTLIT:
        case ID:
        case 35:
        case 40:
        case 51:
          args = Args();
          break;
        default:
          jj_la1[15] = jj_gen;
          ;
        }
        jj_consume_token(52);
        jj_consume_token(48);
                                if (exp1 instanceof Ast.Field)
                                {
                                        exp1F = (Ast.Field) exp1;
                                        {if (true) return new Ast.CallStmt(exp1F.obj, exp1F.nm, args);}
                                }
                                else
                                {
                                        exp1Id = (Ast.Id)exp1;
                                        {if (true) return new Ast.CallStmt(new Ast.This(), exp1Id.nm, args);}
                                }
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case 18:
      jj_consume_token(18);
      jj_consume_token(51);
      exp1 = Expr();
      jj_consume_token(52);
      stmt = Stmt();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 19:
        jj_consume_token(19);
        stmt0 = Stmt();
        break;
      default:
        jj_la1[17] = jj_gen;
        ;
      }
                        {if (true) return new Ast.If(exp1, stmt, stmt0);}
      break;
    case 20:
      jj_consume_token(20);
      jj_consume_token(51);
      exp1 = Expr();
      jj_consume_token(52);
      stmt = Stmt();
                        {if (true) return new Ast.While(exp1, stmt);}
      break;
    case 26:
      jj_consume_token(26);
      jj_consume_token(50);
      jj_consume_token(27);
      jj_consume_token(50);
      jj_consume_token(28);
      jj_consume_token(51);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 17:
      case 24:
      case 25:
      case INTLIT:
      case STRLIT:
      case ID:
      case 35:
      case 40:
      case 51:
        printArg = PrintArg();
        break;
      default:
        jj_la1[18] = jj_gen;
        ;
      }
      jj_consume_token(52);
      jj_consume_token(48);
                        {if (true) return new Ast.Print((Ast.PrArg)printArg);}
      break;
    case 21:
      jj_consume_token(21);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 17:
      case 24:
      case 25:
      case INTLIT:
      case ID:
      case 35:
      case 40:
      case 51:
        exp0 = Expr();
        break;
      default:
        jj_la1[19] = jj_gen;
        ;
      }
      jj_consume_token(48);
                        {if (true) return new Ast.Return(exp0);}
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// Args -> Expr {"," Expr}
  static final public List<Ast.Exp> Args() throws ParseException {
        List<Ast.Exp> args = new ArrayList<Ast.Exp>();
        Ast.Exp expr;
    expr = Expr();
                        args.add(expr);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 49:
        ;
        break;
      default:
        jj_la1[21] = jj_gen;
        break label_8;
      }
      jj_consume_token(49);
      expr = Expr();
                                                               args.add(expr);
    }
                {if (true) return args;}
    throw new Error("Missing return statement in function");
  }

// PrintArg -> Expr | STRLIT
  static final public Ast.Node PrintArg() throws ParseException {
        Ast.Exp expr;
        String str = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 17:
    case 24:
    case 25:
    case INTLIT:
    case ID:
    case 35:
    case 40:
    case 51:
      expr = Expr();
                        {if (true) return expr;}
      break;
    case STRLIT:
      str = StrLit();
                        {if (true) return new Ast.StrLit(str);}
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// InitExpr -> "new" (BasicType "[" INTLIT "]" | ID "(" ")")
//             | Expr
  static final public Ast.Exp InitExpr() throws ParseException {
        Ast.Exp expr;
        Ast.Type type;
        Ast.Id id;
        int index;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 16:
      jj_consume_token(16);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 14:
      case 15:
        type = BasicType();
        jj_consume_token(53);
        index = IntLit();
        jj_consume_token(54);
                                                                     expr = new Ast.NewArray(type, index);
        break;
      case ID:
        id = ID();
        jj_consume_token(51);
        jj_consume_token(52);
                                      expr = new Ast.NewObj(id.nm);
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case 17:
    case 24:
    case 25:
    case INTLIT:
    case ID:
    case 35:
    case 40:
    case 51:
      expr = Expr();
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

// Expr -> AndExpr {"||" AndExpr}
  static final public Ast.Exp Expr() throws ParseException {
        Ast.Exp e1, e2;
    e1 = AndExpr();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 39:
        ;
        break;
      default:
        jj_la1[25] = jj_gen;
        break label_9;
      }
      jj_consume_token(39);
      e2 = AndExpr();
                                              e1 = new Ast.Binop(Ast.BOP.OR, e1, e2);
    }
                {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

// AndExpr -> RelExpr {"&&" RelExpr}
  static final public Ast.Exp AndExpr() throws ParseException {
        Ast.Exp e1, e2;
    e1 = RelExpr();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 38:
        ;
        break;
      default:
        jj_la1[26] = jj_gen;
        break label_10;
      }
      jj_consume_token(38);
      e2 = RelExpr();
                                            e1 = new Ast.Binop(Ast.BOP.AND, e1, e2);
    }
                {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

// RelExpr -> ArithExpr {RelOp ArithExpr}
  static final public Ast.Exp RelExpr() throws ParseException {
        Ast.Exp e1, e2;
        Ast.BOP op;
    e1 = ArithExpr();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 41:
      case 42:
      case 43:
      case 44:
      case 45:
      case 46:
        ;
        break;
      default:
        jj_la1[27] = jj_gen;
        break label_11;
      }
      op = RelOp();
      e2 = ArithExpr();
                                                          e1 = new Ast.Binop(op, e1, e2);
    }
                {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

// ArithExpr -> Term {("+" | "-") Term}
  static final public Ast.Exp ArithExpr() throws ParseException {
        Ast.Exp e1, e2;
        Ast.BOP op;
    e1 = Term();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 34:
      case 35:
        ;
        break;
      default:
        jj_la1[28] = jj_gen;
        break label_12;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 34:
        jj_consume_token(34);
                       op = Ast.BOP.ADD;
        break;
      case 35:
        jj_consume_token(35);
                                                   op = Ast.BOP.SUB;
        break;
      default:
        jj_la1[29] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      e2 = Term();
                        e1 = new Ast.Binop(op, e1, e2);
    }
                {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

// Term -> Factor {("*" | "/") Factor}
  static final public Ast.Exp Term() throws ParseException {
        Ast.Exp e1, e2;
        Ast.BOP op;
    e1 = Factor();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 36:
      case 37:
        ;
        break;
      default:
        jj_la1[30] = jj_gen;
        break label_13;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 36:
        jj_consume_token(36);
                       op = Ast.BOP.MUL;
        break;
      case 37:
        jj_consume_token(37);
                                                   op = Ast.BOP.DIV;
        break;
      default:
